@@ -1,4 +1,4 @@
-KAppTemplate v0.4.1
+KAppTemplate v0.4.3
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
